--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "express": "^4.18.2",
     "init": "^0.1.2",
     "mongoose": "^7.0.2",
-    "nodemon": "^2.0.22"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "sharp": "^0.32.0"
   },
   "name": "react-connect",
   "version": "1.0.0",
