--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "init": "^0.1.2",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
